keep clicking the nav until the view appears, and stop using the deprecated URL constructor